# template-cpp

./: CMakeLists.txt
src/: main.cpp
